<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinalTermQuestion5</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="linkify_description_file_path">linkify_description</string>
    <string name="user_scheme">myuser://</string>
    <string name="add_teacher_text">Add Teacher</string>
    <string name="add_student_text">Add Student</string>
    <string name="show_teachers_text">Show Teachers</string>
    <string name="show_students_text">Show Students</string>
    <string name="title_activity_add_teacher">AddTeacherActivity</string>
    <string name="title_activity_add_student">AddStudentActivity</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="cgpa">CGPA</string>
    <string name="qualification">Qualification</string>
    <string name="save">Save</string>
    <string name="title_activity_show_students">ShowStudentsActivity</string>
    <string name="title_activity_show_teachers">ShowTeachersActivity</string>
    <string name="empty_text">Database is empty!</string>

</resources>