<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/add_teacher_button" 
        android:text="@string/add_teacher_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="click"
        />
    
	<Button
	    android:id="@+id/add_student_button" 
        android:text="@string/add_student_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="click"
        />

	<Button
	    android:id="@+id/show_teachers_button" 
        android:text="@string/show_teachers_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="click"
        />
	
	<Button
	    android:id="@+id/show_students_button" 
        android:text="@string/show_students_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="click"
        />
	
	
</LinearLayout>