<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AddTeacherActivity" >
    
	<EditText
	    android:id="@+id/nameEditText" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/name"
	    />
	
	<EditText
	    android:id="@+id/qualificationEditText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/qualification"
	    />
	
	<Button
	    android:text="@string/save"
	    android:onClick="save" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		/>

</LinearLayout>